--- a/.gitignore
+++ b/.gitignore
@@ -5,3 +5,7 @@
 /Program2/build/
 /ServletProgram3/nbproject/private/
 /ServletProgram3/build/
+/ServletProgram4/nbproject/private/
+/ServletProgram4/build/
+/SessionProgram5/nbproject/private/
+/SessionProgram5/build/
