--- a/.gitignore
+++ b/.gitignore
@@ -9,3 +9,6 @@
 /ServletProgram4/build/
 /SessionProgram5/nbproject/private/
 /SessionProgram5/build/
+/JavaFXpraactical1/nbproject/private/
+/JavaPractical1/nbproject/private/
+/JavaPractical1/build/
